--- a/login.html
+++ b/login.html
@@ -6,17 +6,16 @@
     <title>Login</title>
   </head>
   <body>
-
     <!-- Main Section -->
-    <section style = "text-align: left; display: flex;justify-content: center;align-items: center;">
-      <div style = "display: table; " method = "post">
-        <h4 style = "display: table-row;">
+    <div style = "text-align: left; display: flex;justify-content: center;align-items: center;">
+      <div>
+        <h4>
           <label>Name: </label>   
-          <input type="text" name="username" id = "email">
+          <input type="text" name="name" id = "name">
         </h4><br/>
         <button id = "login"> Login </button><br/><br/>
       </div>
-    </section>
+    </div>
     
  </body>
 </html>
